--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
-header{
+*{
+    margin: 0;
+    padding: 0;
+}
+.cabecalho{
     background-color: red;
     color: white;
+    display: flex;
+    padding: 24px;
+    font-size: 24px;
+    justify-content: space-around;
+}
+.cabecalho-imagem{
+    width: 20%;
+    height: 20%;
+}
+.cabecalho-item{
+    display: inline-block;
+    padding: 0px 20px;
 }
