--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 .cabecalho{
-    background-color: red;
+    background-color: #12C8D3;
     color: white;
     display: flex;
     padding: 24px;
@@ -17,4 +17,16 @@
 .cabecalho-item{
     display: inline-block;
     padding: 0px 20px;
+}
+
+.escola{
+    background-image: linear-gradient(#17A8B0,#cbeded);
+    color: white;
+    font-size: 21px;
+    padding: 80px 150px;
+}
+
+.escola-titulo{
+    padding-top: 24px;
+    
 }
