--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
     margin: 0;
     padding: 0;
 }
+
+body{
+    font-family: sans-serif;
+    font-family: 'Inter', sans-serif;
+    
+}
 .cabecalho{
     background-color: #12C8D3;
     color: white;
@@ -24,9 +30,42 @@
     color: white;
     font-size: 21px;
     padding: 80px 150px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .escola-titulo{
     padding-top: 24px;
     
+}
+
+.escola-imagem{
+    width: 150px;
+}
+.estudante{
+    background-image: linear-gradient(#154567,#15456710);
+    color: white;
+}
+.estudante-imagem{
+    width: 120px;
+}
+
+.estudante-titulo{
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+.estudante-div-maior{
+    display: flex;
+    justify-content: center;
+}
+
+.estudante-div{
+    text-align: center;
+    display: grid;
+    
+}
+
+.estudante-git{
+    text-align: center;
 }
